k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ticketing
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: ticketing-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
